src/test/resources/mutation/error/mutationTypeWithoutRecord/schema.graphqls
type EditResponse {
  id: ID!
}

type Mutation {
  editCustomer(id: ID!): EditResponse! @mutation(typeName: UPDATE)
}
